[package]
name = "observer"
version = "0.1.0"
edition = "2021"

[features]
default = []
async = ["futures", "async-trait", "tokio"]

[dependencies]
futures = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1", optional = true, default-features = false, features = [
    "sync",
    "time",
] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
